@startuml KiemTraDieuKienThue_ClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml
title Class Diagram - UC15: Kiểm tra điều kiện thuê

' --- BOUNDARY LAYER ---
class "ScreenPolicy" as ScreenPolicy <<boundary>> {
    + showPolicy(content)
    + confirmPolicy()
}

' --- BUSINESS LAYER ---
class "Policy" as Policy <<control>> {
    - policyId: String
    - title: String
    - content: String
    - updatedAt: Date
    + <<static>> hasConfirmed(idCard)
}

class "Rental" as Rental <<control>> {
    - registrationId: String
    - roomId: String
    - bedIds: String[]
    - customerName: String
    - idCard: String
    - roomPrice: Double
    - alreadyDeposited: Boolean
    - action: String
    + <<static>> checkEligibility(payload)
}

' --- DATABASE LAYER ---
class "PolicyDB" as PolicyDB <<entity>> {
    + <<static>> getDetails()
}
class "RentalDB" as RentalDB <<entity>> {
    + <<static>> hasDeposit(roomId, idCard)
    + <<static>> areBedsAvailable(roomId, bedIds)
}

"ScreenPolicy" ..> "Policy"
"ScreenPolicy" ..> "Rental"
"Rental" ..> "RentalDB"
"Policy" ..> "PolicyDB"

@enduml
